# llmci-testbed

./: Makefile  README.md  pyproject.toml
.github/workflows/: blog-ticket-classifier-regression.yml  llmci-llm.yml  llmci.yml  scaffold.yml
migration-hard/: README.md  llmci.yaml
migration-hard/prompts/: classify.txt
migration/prompts/: classify.txt
services/json-api/: llmci.yaml
services/json-api/.llmci/baselines/: api-json-validation.json
services/rag-qa/: llmci.yaml
services/rag-qa/.llmci/baselines/: rag-qa.json
services/rag-qa/evals/: qa.jsonl
services/rag-qa/pipeline/: retrieve.py  run.py
services/summarizer/: README.md
services/support-agent/: README.md
services/support-agent/agent/: run_agent.py
services/ticket-classifier/: README.md  llmci-gate.yaml
services/ticket-classifier/.llmci/baselines/: ticket-routing.json  ticket-safety.json
services/ticket-classifier/app/: classifier.py
services/ticket-classifier/app/prompts/: classify.txt
services/ticket-classifier/scripts/: eval_service.py  run_prompt.py  run_responder.py
shared/: README.md
