[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scaffold-testbed"
version = "0.1.0"
description = "Realistic services for dogfooding Scaffold"
requires-python = ">=3.11"
dependencies = [
  "llmci>=0.1.1",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.27",
  "litellm>=1.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.ruff]
line-length = 100
target-version = "py311"
